// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`repos-file gets a repo if it exists 1`] = `
Object {
  "org": "ros2",
  "type": "git",
  "url": "https://github.com/ros2/rclcpp.git",
  "version": "master",
}
`;

exports[`repos-file sets data on a repo 1`] = `
Object {
  "org": "ultra-org",
  "type": "git",
  "url": "https://github.com/ros2/rclcpp.git",
  "version": "ultra-ros",
}
`;

exports[`repos-file throws an error when setting non-existent repo 1`] = `"Repo not-a-repo does not exist"`;

exports[`repos-file throws an error when setting non-existent repo 2`] = `"Repo not-a-repo does not exist"`;
